base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hermes  # Overridden by overlays
